node work in progress

--- a/modules/orionode/orion.conf
+++ b/modules/orionode/orion.conf
@@ -13,12 +13,17 @@ orion.auth.registration.uri=
 orion.metrics.google.tid=
 orion.metrics.google.sitespeed.sample=
 
-orion.oauth.github.client=
-orion.oauth.github.secret=
-orion.oauth.google.client=
-orion.oauth.google.secret=
+orion.oauth.google.client=42597842012-jt28fso6ctibchetd5ss5lrgk4jo7bvk.apps.googleusercontent.com
+orion.oauth.google.secret=hSKmZssGYNA6spaJs4SPa1LI
+orion.oauth.github.client=a31caf88fe829e39e2ca
+orion.oauth.github.secret=f6013e586155554f6ec641c22321123f2a35e9f1
 
-orion.single.user=true
+#orion.oauth.google.client=
+#orion.oauth.google.secret=
+#orion.oauth.github.client=
+#orion.oauth.github.secret=
+
+orion.single.user=false
 orion.buildId=
 
 orion.autoUpdater.url=
